--- a/netlify.toml
+++ b/netlify.toml
@@ -1,21 +1,16 @@
-# example netlify.toml
 [build]
-  command = " npm run build"
-  functions = "netlify/functions"
-  publish = "build"
+  command = "npm run build"  # Adjust this to match your build command for the React app
+  functions = "netlify/functions"  # If you have serverless functions
+  publish = "build"  # The directory where your built React app is located
 
-  ## Uncomment to use this redirect for Single Page Applications like create-react-app.
-  ## Not needed for static site generators.
-  #[[redirects]]
-  #  from = "/*"
-  #  to = "/index.html"
-  #  status = 200
+[[redirects]]  # This configuration is typically used for single-page applications like React
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
-  ## (optional) Settings for Netlify Dev
-  ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
-  #[dev]
-  #  command = "yarn start" # Command to start your dev server
-  #  port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
+# (optional) Settings for Netlify Dev
+#[dev]
+#  command = "yarn start"  # Command to start your dev server (if using Netlify Dev)
+#  port = 3000  # Port that the dev server will be listening on
+#  publish = "dist"  # Folder with the static content for _redirect file
 
-  ## more info on configuring this file: https://ntl.fyi/file-based-build-config
